Adding custom card element

--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Playground</title>
   </head>
   <body>
-    <h1>Playground</h1>
+    <header>
+      <h1>Playground</h1>
+    </header>
+    <main id="container">
+      <pg-card data-value="10" data-suit="&spades;"></pg-card>
+    </main>
+    <footer>
+      <p>&copy; 2022 JanKos</p>
+    </footer>
     <noscript>Your browser does not support JavaScript!</noscript>
     <script src="./script.js" type="module"></script>
   </body>
