--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
     <title>Playground</title>
   </head>
   <body>
-    <header>
-      <h1>Playground</h1>
-    </header>
-    <main id="container">
-      <pg-card data-value="10" data-suit="&spades;"></pg-card>
-    </main>
-    <footer>
-      <p>&copy; 2022 JanKos</p>
-    </footer>
+    <div class="container">
+      <header>
+        <h1>Playground</h1>
+      </header>
+      <main id="content">
+        <pg-card data-value="10" data-suit="&spades;"></pg-card>
+      </main>
+      <footer>
+        <p>&copy; 2023 JanKos</p>
+      </footer>
+    </div>
     <noscript>Your browser does not support JavaScript!</noscript>
     <script src="./script.js" type="module"></script>
   </body>
