Saving pok progress

--- a/pok/index.html
+++ b/pok/index.html
@@ -2,23 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="./style.css" rel="stylesheet">
-    <title>Playground</title>
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/img/favicon.ico" />
+    <link rel="stylesheet" href="index.css" />
+    <script defer type="module" src="index.js"></script>
+    <title>Pok</title>
   </head>
   <body>
     <div class="container">
       <header>
-        <h1>Playground</h1>
+        <h1>Pok</h1>
       </header>
-      <main id="content">
-        <pg-card data-value="10" data-suit="&spades;"></pg-card>
-      </main>
+      <main id="content"></main>
       <footer>
-        <p>&copy; 2023 JanKos</p>
+        <p>&copy; 2024 JanKos</p>
       </footer>
     </div>
     <noscript>Your browser does not support JavaScript!</noscript>
-    <script src="./script.js" type="module"></script>
   </body>
 </html>
